[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Templates/EventBlock.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/EventBlock/ExpandControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/styles/selected_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/EventBlock/Spacer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/dialogic/Images/Plugin/plugin-editor-icon-dark-theme.svg" type="Texture" id=6]
[ext_resource path="res://addons/dialogic/Images/Event Icons/event-outline.svg" type="Texture" id=7]
[ext_resource path="res://addons/dialogic/Editor/Events/Templates/PopupMenu.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="EventTemplate" type="HBoxContainer"]
anchor_right = 1.0
margin_right = -922.0
margin_bottom = 76.0
focus_mode = 1
size_flags_vertical = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
event_name = ""
event_data = {
"event_id": "dialogic_000"
}
expand_on_default = true

[node name="Indent" type="Control" parent="."]
visible = false
margin_bottom = 64.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 38.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="SelectedStyle" type="Panel" parent="PanelContainer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_right = 76.0
margin_bottom = 50.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 38.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 26.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Warning" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
margin_bottom = 64.0
hint_tooltip = "Choice events should go 
between a [Question]
and [End branch] events.

[Question]
    [Choice]
    [...]
[End branch]"
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 64.0
mouse_filter = 1

[node name="IconPanel" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Header/CenterContainer"]
self_modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_top = 32.0
margin_bottom = 32.0
mouse_default_cursor_shape = 6
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="IconTexture" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Header/CenterContainer/IconPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
margin_left = 8.0
margin_top = 25.0
margin_right = 8.0
margin_bottom = 39.0

[node name="Content" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
margin_left = 12.0
margin_right = 22.0
margin_bottom = 64.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="ExpandControl" parent="PanelContainer/MarginContainer/VBoxContainer/Header" instance=ExtResource( 2 )]
margin_left = 178.0
margin_right = 242.0

[node name="Spacer" parent="PanelContainer/MarginContainer/VBoxContainer/Header" instance=ExtResource( 4 )]
margin_left = 26.0
margin_right = 26.0
margin_bottom = 64.0

[node name="HelpButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
visible = false
margin_left = 90.0
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Open the documentation of this event"
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_left = 202.0
margin_top = 34.0
margin_right = 1012.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="Content" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body"]
margin_top = 4.0
margin_right = 1012.0
margin_bottom = 8.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 2
custom_constants/margin_bottom = 2

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 42.0
margin_right = 137.0
margin_bottom = 88.0
items = [ "Move Up", null, 0, false, false, 0, 0, null, "", false, "Move Down", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Remove", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 8 )

[connection signal="visibility_changed" from="Indent" to="." method="_on_Indent_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/HelpButton" to="." method="_on_HelpButton_pressed"]
